# conservision2

./: .gitignore  convnext_large_384_k_fold.ipynb  convnext_large_384_k_fold.py  pyproject.toml  train.ipynb  train.py  train_k_fold.py
lib/: checkpoint.py  dataset.py  metric.py  photo.py  trainer.py  training.py  transformations.py
src/: data.py  lib.py  util_siglip.py
