[project]
name = "conservision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.5",
    "pandas>=2.3.2",
    "pandas-stubs>=2.3.0.250703",
    "pillow>=11.3.0",
    "scikit-learn>=1.7.1",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "ipython==9.5.0",
    "opencv-python>=4.12.0.88",
    "transformers>=4.56.0",
    "ipywidgets>=8.1.7",
    "ipympl>=0.9.7",
    "notebook>=7.4.5",
    "adamp>=0.3.0",
    "tensorboard>=2.20.0",
    "fastai>=2.8.4",
    "timm>=1.0.19",
]

